<resources>
    <string name="app_name">Track-It</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label">testing</string>
    <string name="owner_name">Owner Name</string>
    <string name="title">Title</string>
    <string name="location_name">Location Name</string>
    <string name="established_date">Established Date DD/MM/YYYY</string>
    <string name="latitude_and_longitude">Latitude and Longitude</string>
    <string name="tag_name">Tag Name</string>
    <string name="save_pin">Save Pin</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="todo">TODO</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="no_data_found">No data found</string>
    <string name="geojson">GeoJson</string>
    <string name="copy">Copy</string>

    <string-array name="feelings">
        <item>Sad</item>
        <item>Dissatisfied</item>
        <item>Satisfied</item>
        <item>Happy</item>
        <item>Excited</item>
    </string-array>
</resources>