<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:backgroundTint="@color/color3"
        android:elevation="@dimen/_8sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:minHeight="@dimen/_160sdp"
                    android:padding="@dimen/_6sdp">
                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvTitle"
                            tools:text="Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_4sdp"
                            android:layout_marginEnd="@dimen/_20sdp"
                            android:textSize="@dimen/_16sdp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:background="@color/grayColor" />

                        <TextView
                            android:id="@+id/tvOwnerName"
                            style="@style/cardTextView"
                            tools:text="@string/owner_name"/>

                        <TextView
                            android:id="@+id/tvLocationName"
                            style="@style/cardTextView"
                            tools:text="@string/location_name"/>

                        <TextView
                            android:id="@+id/tvEstablishDate"
                            style="@style/cardTextView"
                            tools:text="@string/established_date"/>

                        <TextView
                            android:id="@+id/tvlatLong"
                            style="@style/cardTextView"
                            tools:text="@string/latitude_and_longitude"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:background="@color/grayColor" />
                    </LinearLayout>



                    <TextView
                        android:id="@+id/tvTagName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway_medium"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_8sdp"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_4sdp"
                        android:textSize="@dimen/_11sdp"
                        android:background="@drawable/chip_background"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                        tools:text="@string/tag_name" />

                    <TextView
                        android:id="@+id/tvDateTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_4sdp"
                        android:textSize="@dimen/_11sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                        tools:text="13 Apr 2024 12:30 pm" />

                    <ImageView
                        android:id="@+id/imageViewMenu"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/icon_dots"
                        android:clickable="true"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_3sdp" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>